--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@ body{
   /*about styles*/
   
   .about {
-      background-color:yellow 
+    
   }
   
   /*project styles*/
@@ -61,5 +61,56 @@ body{
   /*sidebar styles*/
   .sidebar {
       background-color: #1E2939;
+      padding-top: 40px;
+      width: 370px;
+    
   }
+  .photo{
+    width: 370px;
+    margin-bottom: 50px;
+
+  }
+
+  .contacts,
+  .tech-skills {
+    margin-left: 40px;
+  }
+
+  .contacts{
+    margin-bottom: 50px;
+  }
+
+
+  .sidebar-title{
+    color: #ffffff;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 10px;
+  }
+
+  .contact-type{
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    color: #FFF;
+    margin-right: 10px ;
+  }
+
+  .contact-link{
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    color: #565e6a;
+  }
+
+  .tech-skills-list{
+    color: #fff;
+    padding: 0;
+    margin-left: 17px;
+  }
+  .tech-skills-item
   
