--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 
 body{
     font-family: 'Montserrat', sans-serif;  
+    background-color: #f5f7fa;
   }
   
   /*main styles */
@@ -8,22 +9,50 @@ body{
   .main {
       display: flex;
       flex-direction: row-reverse;
-      background-color: #f5f7fa;
       width: 1200px ;
       margin: 0 auto;
   }
   
   .main-content {
   background-color: #fff;
+  box-shadow: 6px 6px 20px 0px rgba(0, 0, 0, 0.10);
+  padding: 105px 90px ;
   }
   
   
   /*about styles*/
   
   .about {
-    
+    margin-bottom: 40px;
+  }
+
+  .about-positio{
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 20px;
+  }
+
+  .about-name{
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    color: #000;
+    margin-bottom: 25px;
   }
   
+.about-description{
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  color: #595959;
+  width: 400px;
+}
+
+
   /*project styles*/
   
   .projects {
@@ -37,10 +66,23 @@ body{
   
   }
   
-  .project-title {
-
+  .title {
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    color: #000;
+    margin-bottom: 10px;
   }
   
+.project-item{
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  color: #000;
+}
+
   /*work styles*/
   .work{
   
@@ -72,7 +114,8 @@ body{
   }
 
   .contacts,
-  .tech-skills {
+  .tech-skills,
+  .soft-skills{
     margin-left: 40px;
   }
 
@@ -107,10 +150,22 @@ body{
     color: #565e6a;
   }
 
-  .tech-skills-list{
+  .tech-skills-list
+  .soft-skills-list{
     color: #fff;
     padding: 0;
     margin-left: 17px;
   }
-  .tech-skills-item
+  .tech-skills-item,
+  .soft-skills-item{
+    color:#FB6D3A;
+  }
   
+  .tech-skills-text,
+  .soft-skills-text{
+    color: #fff;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
